2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* configure.in: Bump version number to 0.11.1.
	(RELEASE_DATE): Bump.

2002-03-09  Bruno Haible  <bruno@clisp.org>

	* configure.in: Don't check for stpncpy; AIX 4.3.3 has an incompatible
	implementation of it.
	* acconfig.h (HAVE_STPNCPY): Define on glibc systems only.

2002-03-07  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MAKEINFO): New variable.
	* missing (makeinfo): Don't call touch without arguments if the source
	texinfo file doesn't contain a @setfilename command.
	Reported by Miroslaw Dobrzanski-Neumann <mne@mosaic-ag.com>.

2002-02-15  Bruno Haible  <bruno@clisp.org>

	* djgpp/*: Update DJGPP support.
	From Juan Manuel Guerrero <st001906@hrz1.hrz.tu-darmstadt.de>.
	* configure.in (CXX): Recognize 'gpp' as an alternative name for 'g++'.

2002-02-14  Andrew Zabolotny  <zap@cobra.ru>

	* os2/README.OS2: Update.
	* os2/Makefile: Update.

2002-02-10  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Remove os2/iconv/README.

2002-01-14  Bruno Haible  <bruno@clisp.org>

	* configure.in: Add check for libexpat.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (SUBDIRS): Add libuniname.
	* configure.in (AC_OUTPUT): Add libuniname/Makefile.

2002-02-06  Bruno Haible  <bruno@clisp.org>

	* ltmain.sh: Upgrade from libtool-1.4 to libtool-1.4.2.
	* config.rpath: Likewise.

2002-02-02  Bruno Haible  <bruno@clisp.org>

	* ltmain.sh: Add DESTDIR support on ELF systems.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11 released.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Bump version number to 0.11.
	(RELEASE_DATE): Bump.
	* Makefile.am (EXTRA_DIST): Remove README-alpha.

2002-01-31  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Remove instructions for using Intel icc. It's getting to
	be fixed in icc.

2002-01-30  Bruno Haible  <bruno@clisp.org>

	* configure.in: