@@ -29,10 +29,12 @@ gettextsrc_SCRIPTS = config.rpath
 SUBDIRS = doc intl intl-java lib libuniname src po man m4 projects misc tests
 
 EXTRA_DIST = config.rpath BUGS DISCLAIM PACKAGING README.gemtext \
-             djgpp/Makefile.maint djgpp/README.in djgpp/README \
-             djgpp/config.bat djgpp/config.in djgpp/config.sed \
-             djgpp/config.site djgpp/edtests.bat djgpp/fnchange.in \
-             djgpp/fnchange.lst djgpp/tscript.sed \
+             djgpp/COPYING.DJ djgpp/Makefile.maint djgpp/README.DJ \
+             djgpp/README.in djgpp/README djgpp/config.bat djgpp/config.in \
+             djgpp/config.sed djgpp/config.site djgpp/djpwd.h \
+             djgpp/edtests.bat djgpp/fnchange.in djgpp/fnchange.lst \
+             djgpp/getpwnam.c djgpp/msginit.sed djgpp/tscript.sed \
+             djgpp/unsetenv.c \
              os2/README.OS2 os2/Makefile os2/backward.def os2/configure.awk
 
 ABOUT-NLS: $(srcdir)/doc/nls.texi $(srcdir)/doc/matrix.texi
