@@ -7,6 +7,8 @@
 	* configure.in: Bump version number to 0.11.1.
 	(RELEASE_DATE): Bump.
 
+	* Makefile.am (EXTRA_DIST): Add some more djgpp/* files.
+
 2002-03-09  Bruno Haible  <bruno@clisp.org>
 
 	* configure.in: Don't check for stpncpy; AIX 4.3.3 has an incompatible
